kind-test/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinema-service
  labels:
    app: cinema-service
spec:
  selector:
    matchLabels:
      app: cinema-service
  template:
    metadata:
      labels:
        app: cinema-service
    spec:
      containers:
        - name: cinema-service
          image: ghcr.io/fh-erfurt/microkino:cinemaservice
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 80m
              memory: 128Mi
      imagePullSecrets:
        - name: dockerconfigjson-github-com
