kind-test/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cinema-service
  labels:
    app: cinema-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: cinema-service
