kind-test/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinema-service
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: cinema-service
                port:
                  number: 80
      # host: dev.devops-toolkit.192.168.64.199.xip.io
